--- a/web/package.json
+++ b/web/package.json
@@ -29,6 +29,7 @@
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "js-cookie": "^2.2.0",
+    "lodash": "^4.17.10",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -45,6 +46,7 @@
     "redux-thunk": "^2.2.0",
     "reset-css": "^3.0.0",
     "resolve": "1.6.0",
+    "socket.io-client": "^2.1.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
